# CourseWork_ParalelComp_Tereshchenko

./: .gitignore  CMakeLists.txt  README.md  config.env  ДА-21_Терещенко_О.І._Курсова_Робота.docx
results/: build_summary.csv  search_summary.csv
results/plots_build/: build_aggregated.csv
results/search_raw/: search_c100_run1.csv  search_c100_run2.csv  search_c100_run3.csv  search_c100_run4.csv  search_c100_run5.csv  search_c100_run6.csv  search_c100_run7.csv  search_c10_run1.csv  search_c10_run2.csv  search_c10_run3.csv  search_c10_run4.csv  search_c10_run5.csv  search_c10_run6.csv  search_c10_run7.csv  search_c150_run1.csv  search_c150_run2.csv  search_c150_run3.csv  search_c150_run4.csv  search_c150_run5.csv  search_c150_run6.csv  search_c150_run7.csv  search_c1_run1.csv  search_c1_run2.csv  search_c1_run3.csv  search_c1_run4.csv  search_c1_run5.csv  search_c1_run6.csv  search_c1_run7.csv  search_c200_run1.csv  search_c200_run2.csv  search_c200_run3.csv  search_c200_run4.csv  search_c200_run5.csv  search_c200_run6.csv  search_c200_run7.csv  search_c20_run1.csv  search_c20_run2.csv  search_c20_run3.csv  search_c20_run4.csv  search_c20_run5.csv  (+56 more)
scripts/: plot_build_detailed.py  plot_search_detailed.py
src/apps/: client_cli_main.cpp  load_test_main.cpp  server_main.cpp
src/concurrency/: blocking_queue.h  thread_pool.cpp  thread_pool.h
src/core/: document_store.cpp  document_store.h  file_scanner.cpp  file_scanner.h  index_builder.cpp  index_builder.h  inverted_index.cpp  inverted_index.h  tokenizer.cpp  tokenizer.h
src/net/: http_server.cpp  http_server.h  json_min.h  request_router.cpp  request_router.h
src/utils/: config.cpp  config.h  logging.cpp  logging.h  time_utils.cpp  time_utils.h
web/: app.js  index.html  styles.css
